TabList: fix truncation

--- a/coral-component-tablist/src/styles/index.styl
+++ b/coral-component-tablist/src/styles/index.styl
@@ -23,7 +23,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
 
-  ._coral-Tabs-itemLabel {
+  ._coral-Tabs-itemLabel:not(:empty) {
     display: inline;
   }
 }
